--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       I have a lot of questions to describe what this tool actually is so below is short description of Digitool and emulator device:
     </h2>
     <div class="square"> 
-      <img src="resources/emubt.svg">
+      <!--<img src="resources/emubt.svg">-->
+      <img src="resources/carousel_slides/knock_history.jpg">
     </div>
     <p>
       This modification works only with Digifant1 injection system, so if you deal with MK2, Passat or Corrado equipped with Digifant 1
