--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </h2>
     <div class="square"> 
       <!--<img src="resources/emubt.svg">-->
-      <img src="resources/carousel_slides/knock_history.jpg">
+      <img src="resources/carousel_slides/knock_history.jpg" style="width:50%;">
     </div>
     <p>
       This modification works only with Digifant1 injection system, so if you deal with MK2, Passat or Corrado equipped with Digifant 1
