--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <div class="main">
   
-  <div class=top_nav_desc>
-    <div class="topnav" id="home">
+  <div class=top_nav_desc style="position: fixed;">
+    <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#demos">Demos</a>
@@ -38,16 +38,16 @@
       <a id="slide_text">EEPROM Emulator for Digifant 1</a>
     </div>
   </div>
-  <div class="top_bar">
+  
+  <div class="top_bar" id="home">
       <img class="banner" src="resources/banner.png" alt="main_banner">
   </div>
-  
   <div id="streams">
     <div id="left_stream">
       <div class="text">
       <h1 id="about">ABOUT</h1>
       <h2>
-        I have a lot of questions to describe what this tool actually is so below is short description of Digitool and emulator device:
+        Below is short description of Digitool and emulator device:
       </h2>
       <div class="square"> 
         <!--<img src="resources/emubt.svg">-->
