--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a title="Skype: ravmiecznik" href="skype:ravmiecznik"><img class="contact_link contact_link_left" src="resources/skype.png"></a>
       <a title="Digifant tool" href="https://www.youtube.com/channel/UCf1aKdZV842va2j9UnfraSQ?view_as=subscriber/"><img class="contact_link contact_link_left" src="resources/youtube.png"></a>
       <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left" src="resources/facebook.png"></a>
+      <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img class="contact_link contact_link_left" src="resources/git-icon_1.png"></a>
         <!--<a href="#home"><div>Home</div></a>-->
         <!--<a href="#about"><div>About</div></a>-->
         <!--<a href="#demos"><div>Demos</div></a>-->
