--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class=top_nav_hidden id="links">
       <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link contact_link_left" src="resources/messenger.png"></a>
-      <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com"><img class="contact_link contact_link_left" src="resources/email.png"></a>
+      <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link contact_link_left" src="resources/email.png"></a>
       <a title="Skype: ravmiecznik" href="skype:ravmiecznik"><img class="contact_link contact_link_left" src="resources/skype.png"></a>
       <a title="Digifant tool" href="https://www.youtube.com/channel/UCf1aKdZV842va2j9UnfraSQ?view_as=subscriber/"><img class="contact_link contact_link_left" src="resources/youtube.png"></a>
       <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left" src="resources/facebook.png"></a>
@@ -115,7 +115,7 @@
       <div class="contact_view text">
         <h1 id="contact" style="font-size: 1.5vw;">CONTACT  
         <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link" src="resources/messenger.png"></a>
-        <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com"><img class="contact_link" src="resources/email.png"></a>
+        <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link" src="resources/email.png"></a>
         <a title="Skype: ravmiecznik" href="skype:ravmiecznik"><img class="contact_link" src="resources/skype.png"></a>
         <a title="ravmiecznk@gmail.com" href="skype:ravmiecznik?call" style="font-size: 20px; color: black;">ravmiecznk@gmail.com</a>
         </h1>
@@ -126,7 +126,7 @@
 
   </div>>
     <div class="footer">© 2020 Rafal Miecznik
-    <a href="mailto:ravmiecznik@gmail.com"> ravmiecznk@gmail.com</a>
+    <a href="mailto:ravmiecznik@gmail.com?subject=EMUBT"> ravmiecznk@gmail.com</a>
   </div>
 <script>
 
