--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 <div class="main">
   
-  <div class=top_nav_desc style="position: fixed;">
+  <!--<div class=top_nav_desc style="position: fixed;">-->
+  <div class=top_nav_desc">
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#about">About</a>
@@ -40,13 +41,20 @@
       <a href="#contact">Contact</a>
     </div>
     
-    <div class="topnav" id="slide_description">
-      <a id="slide_text">EEPROM Emulator for Digifant 1</a>
-    </div>
+    <!--<div class="topnav" id="slide_description">-->
+    <!--  <a id="slide_text">EEPROM Emulator for Digifant 1</a>-->
+    <!--</div>-->
   </div>
   
   <div class="top_bar" id="home">
-      <img class="banner" src="resources/banner.png" alt="main_banner">
+    <h1> </h1>
+    <h1> </h1>
+    <h1>BLUETTOH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+    <h2 style="margin-left: 6%;">Replace old EEPROM chip with this board !</h2>
+    <h2 style="margin-left: 7%;">Enable data feedback for most of available Digifant 1 chips</h2>
+    <h2 style="margin-left: 8%;">TunerPro support for data feedback and hit tracing</h2>
+    <h2 style="margin-left: 9%;">Works in standalone mode without PC connection</h2>
+      <!--<img class="banner" src="resources/banner.png" alt="main_banner">-->
   </div>
   <div id="streams">
     <div id="left_stream">
