--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class=top_nav_hidden id="links">
       <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link contact_link_left" src="resources/messenger.png"></a>
       <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link contact_link_left" src="resources/email.png"></a>
-      <a title="Skype: ravmiecznik" href="skype:ravmiecznik"><img class="contact_link contact_link_left" src="resources/skype.png"></a>
+      <a title="Skype: ravmiecznik" href="skype:ravmiecznik?chat"><img class="contact_link contact_link_left" src="resources/skype.png"></a>
       <a title="Digifant tool" href="https://www.youtube.com/channel/UCf1aKdZV842va2j9UnfraSQ?view_as=subscriber/"><img class="contact_link contact_link_left" src="resources/youtube.png"></a>
       <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left" src="resources/facebook.png"></a>
       <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img class="contact_link contact_link_left" src="resources/git-icon_1.png"></a>
@@ -124,8 +124,8 @@
         <h1 id="contact" style="font-size: 1.5vw;">CONTACT  
         <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link" src="resources/messenger.png"></a>
         <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link" src="resources/email.png"></a>
-        <a title="Skype: ravmiecznik" href="skype:ravmiecznik"><img class="contact_link" src="resources/skype.png"></a>
-        <a title="ravmiecznk@gmail.com" href="skype:ravmiecznik?call" style="font-size: 20px; color: black;">ravmiecznk@gmail.com</a>
+        <a title="Skype: ravmiecznik" href="skype:ravmiecznik?chat"><img class="contact_link" src="resources/skype.png"></a>
+        <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT" style="font-size: 20px; color: black;">ravmiecznk@gmail.com</a>
         </h1>
       </div>
     </div>
