--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
 <div class="main">
   
-  <!--<div class=top_nav_desc style="position: fixed;">-->
-  <div class=top_nav_desc">
+  <div class=top_nav_container>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#about">About</a>
@@ -40,10 +39,6 @@
       <a href="#links">Links</a>
       <a href="#contact">Contact</a>
     </div>
-    
-    <!--<div class="topnav" id="slide_description">-->
-    <!--  <a id="slide_text">EEPROM Emulator for Digifant 1</a>-->
-    <!--</div>-->
   </div>
   
   <div class="top_bar" id="home">
