--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
     </div>
   </div>
   
-  <div class="top_bar" id="home">
-    <h1> </h1>
-    <h1> </h1>
-    <h1>BLUETTOH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
-    <h2 style="margin-left: 6%;">Replace old EEPROM chip with this board !</h2>
-    <h2 style="margin-left: 7%;">Enable data feedback for most of available Digifant 1 chips</h2>
-    <h2 style="margin-left: 8%;">TunerPro support for data feedback and hit tracing</h2>
-    <h2 style="margin-left: 9%;">Works in standalone mode without PC connection</h2>
-      <!--<img class="banner" src="resources/banner.png" alt="main_banner">-->
+  <div class=top_bar_container>
+    <div class="top_bar" id="home">
+      <h1>BLUETTOH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+      <h2 style="margin-left: 6%; width: 100%;">Replace old EEPROM chip with this board !</h2>
+      <h2 style="margin-left: 7%; width: 100%;">Enable data feedback for most of available Digifant 1 chips</h2>
+      <h2 style="margin-left: 8%; width: 100%;">TunerPro support for data feedback and hit tracing</h2>
+      <h2 style="margin-left: 9%; width: 100%;">Works in standalone mode without PC connection</h2>
+    </div>
+    <div id="emubt_svg"><img src="resources/emubt.svg"> </div>
+      
   </div>
   <div id="streams">
     <div id="left_stream">
@@ -60,7 +61,7 @@
       </h2>
       <div class="square"> 
         <!--<img src="resources/emubt.svg">-->
-        <img src="resources/carousel_slides/knock_history.jpg" style="width:15vw; float: left; margin: 15px;">
+        <img src="resources/emubt_color.png" style="width:15vw; float: left; margin: 15px;">
       </div>
       <p>
         This modification works only with Digifant1 injection system, so if you deal with MK2, Passat or Corrado equipped with Digifant 1
