--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           Payment with PayPal, revolut or regular bank transfer
         </p>
       </div>
+      
       <div class="contact_view text">
         <h1 id="contact" style="font-size: 1.5vw;">CONTACT</h1>
         <div class="contact_view" style="margin-left: 5%;"><a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT" style="font-size: 20px; color: black;">ravmiecznk@gmail.com</a></div>
@@ -123,6 +124,7 @@
           <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link" src="resources/messenger.png"></a>
           <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link" src="resources/email.png"></a>
           <a title="Skype: ravmiecznik" href="skype:ravmiecznik?chat"><img class="contact_link" src="resources/skype.png"></a>
+      </div>
       </div>
     </div>
       
