--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
 <div class="main">
-  
+  <!--<embed src="file:///home/rafal.miecznik/private/digifanttool.github.io/index.html" width="800px" height="900px" /> -->
   <div class=top_nav_container>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
@@ -43,7 +43,7 @@
   
   <div class=top_bar_container>
     <div class="top_bar" id="home">
-      <h1>BLUETTOH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+      <h1>BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
       <h2 style="margin-left: 6%; width: 100%;">Replace old EEPROM chip with this board !</h2>
       <h2 style="margin-left: 7%; width: 100%;">Enable data feedback for most of available Digifant 1 chips</h2>
       <h2 style="margin-left: 8%; width: 100%;">TunerPro support for data feedback and hit tracing</h2>
