--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             no need to open the ECU anymore if you want to change something in your maps or program itself.
           </p>
         </div>
+        <div class="text demos_frame">
+          <h1 class="demos">DEMOS</h1>
+            <iframe class="demo_window" src="https://www.youtube.com/embed/b4Lb02Id1Gc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="demo_window" src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="demo_window" src="https://www.youtube.com/embed/VVEnGDDLKik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
+            <iframe class="demo_window" src="https://www.youtube.com/embed/b4Lb02Id1Gc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="demo_window" src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="demo_window" src="https://www.youtube.com/embed/VVEnGDDLKik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>    
          
       <div id="right_stream">
@@ -110,14 +120,14 @@
         </div>
       </div>
     </div>
-      <div class="central_stream">
-        <div class="text">
-          <h1 id="demos">DEMOS</h1>
-          <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/b4Lb02Id1Gc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/VVEnGDDLKik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
+    <!--  <div class="central_stream">-->
+    <!--    <div class="text">-->
+    <!--      <h1 id="demos">DEMOS</h1>-->
+    <!--      <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/b4Lb02Id1Gc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+    <!--      <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+    <!--      <iframe class="demo_window" width="560" height="315" src="https://www.youtube.com/embed/VVEnGDDLKik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+    <!--    </div>-->
+    <!--</div>-->
   </div>
   <!--<div class="footer">© 2020 Rafal Miecznik<a href="mailto:ravmiecznik@gmail.com?subject=EMUBT"> ravmiecznk@gmail.com</a></div> -->
   
