--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!--<embed src="file:///home/rafal.miecznik/private/digifanttool.github.io/index.html" width="800px" height="900px" /> -->
 
-    <div class="top_nav_container">
+    <!--<div class="top_nav_container" style="width: 100%;">-->
       <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
@@ -25,7 +25,7 @@
         <!--<a href="#links">Links</a>-->
         <a href="#contact">Contact</a>
       </div>
-    </div>
+    <!--</div>-->
   
     <div class=top_bar_container>
       <div class="top_bar" id="top_bar">
