main.css cleanup

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--</div>-->
   
     <div class=top_bar_container>
-      <div class="top_bar square" id="top_bar">
+      <div class="top_bar_txt square" id="top_bar">
         <h1>BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
         <h2 style="margin-left: 6%; width: 100%;">Replace old EEPROM chip with this board !</h2>
         <h2 style="margin-left: 7%; width: 100%;">Enable data feedback for most of available Digifant 1 chips</h2>
