screen width adapatation added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <link rel="stylesheet" href="main.css">
-  
+  <meta charset="UTF-8">
 </head>
   
   
@@ -128,7 +128,7 @@
     </div>
     <!--<iframe id="location" src="https://mylocation.org/" style="display: block";></iframe>-->
 
-  <div class="footer">© 2020 Rafal Miecznik<a href="mailto:ravmiecznik@gmail.com?subject=EMUBT"> ravmiecznk@gmail.com</a></div>
+  <div class="footer">&copy 2020 Rafal Miecznik<a href="mailto:ravmiecznik@gmail.com?subject=EMUBT"> ravmiecznk@gmail.com</a></div>
   
 </body>
 <script src="main.js"></script>
