--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
   
   
-<body style="margin: 0;">
+<body id="home" style="margin: 0;">
 <!--https://github.com/ravmiecznik/emub_bt_r/releases/latest/download/emubt_V2.6_01052020.hex-->
   <!--<embed src="file:///home/rafal.miecznik/private/digifanttool.github.io/index.html" width="800px" height="900px" /> -->
 
@@ -35,7 +35,7 @@
     
     <div class=floating_links id="links">
       <a title="messenger" href="https://m.me/tuningtool" ><img class="contact_link contact_link_left" src="resources/messenger.png"></a>
-      <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link contact_link_left" src="resources/email.png"></a>
+      <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img class="contact_link contact_link_left" src="resources/email2.png"></a>
       <a title="Skype: ravmiecznik" href="skype:ravmiecznik@live.com?chat"><img class="contact_link contact_link_left" src="resources/skype.png"></a>
       <a title="Digifant tool" href="https://www.youtube.com/channel/UCf1aKdZV842va2j9UnfraSQ?view_as=subscriber/"><img class="contact_link contact_link_left" src="resources/youtube.png"></a>
       <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left" src="resources/facebook.png"></a>
@@ -108,10 +108,10 @@
           
           <div class="contact_view text cell" id="contact">
             <h1 style="font-size: 1.5vw;">CONTACT</h1>
-            <div class="contact_view" style="margin-left: 5%;"><a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT" style="font-size: 20px; color: black;">ravmiecznk@gmail.com</a></div>
+            <div class="contact_view" style="margin-left: 5%;"><a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT" style="font-size: 20px;">ravmiecznk@gmail.com</a></div>
             <div>
               <a title="messenger" href="https://m.me/tuningtool" ><img src="resources/messenger.png"></a>
-              <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img src="resources/email.png"></a>
+              <a title="ravmiecznk@gmail.com" href="mailto:ravmiecznik@gmail.com?subject=EMUBT"><img src="resources/email2.png"></a>
               <a title="Skype: ravmiecznik" href="skype:ravmiecznik@live.com?chat"><img src="resources/skype.png"></a>
             </div>
           </div>
