--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       </div>
       
       <div class="top_bar_txt square" id="top_bar">
-        <h1>BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
-        <h2 style="margin-left: 6%; width: 100%;">Replace old EEPROM chip with this board !</h2>
-        <h2 style="margin-left: 7%; width: 100%;">Enable data feedback for most of available Digifant 1 chips</h2>
-        <h2 style="margin-left: 8%; width: 100%;">TunerPro support for data feedback and hit tracing</h2>
-        <h2 style="margin-left: 9%; width: 100%;">Works in standalone mode without PC connection</h2>
+        <h1 style="margin-left: 1%; width: 100%; font-size: 2vw;">BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+        <h2 style="margin-left: 6%; width: 100%; font-size: 1.5vw;">Replace old EEPROM chip with this board !</h2>
+        <h2 style="margin-left: 7%; width: 100%; font-size: 1.5vw;;">Enable data feedback for most of available Digifant 1 chips</h2>
+        <h2 style="margin-left: 8%; width: 100%; font-size: 1.5vw;">TunerPro support for data feedback and hit tracing</h2>
+        <h2 style="margin-left: 9%; width: 100%; font-size: 1.5vw;">Works in standalone mode without PC connection</h2>
       </div>
       <div>
         <img  id="emubt_svg" src="resources/emubt.svg">
