--- a/index.html
+++ b/index.html
@@ -170,6 +170,6 @@
 
   
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script language="JavaScript" type="text/javascript"  src="main.js"></script>
 </html>
