--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h2 ><a href="">RELSEASE NUMBER</a></h2>
           </div>
           <div id="tunerpro">
-            <h2 ><a href="https://www.tunerpro.net/">TUNER PRO</a></h2>
+            <h2 ><a href="https://www.tunerpro.net/">TunerPro home page</a></h2>
           </div>
         </div>
         
