aldl droid download file category added

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
             <div id="hex">
               <h4></h4>
             </div>
-            
+            <div id="aldldroid">
+              <h4></h4>
+            </div>            
             <div id="other">
               <h4></h4>
             </div>
@@ -150,6 +152,11 @@
           </div>
           <div id="tunerpro">
             <h3 ><a href="https://www.tunerpro.net/">TunerPro home page</a></h3>
+          </div>
+          <div id="aldl_droid">
+            <h3 >
+              <a href="https://play.google.com/store/apps/details?id=com.sgiroux.aldldroid">ALDLdroid home page</a>
+            </h3>
           </div>
         </div>
         
