--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
     <div class="main_grid bottom_border" id="main_grid">
         <div class="cell text bottom_border" id="about">
           
-          <iframe class="main_iframe" src="https://www.youtube.com/embed/rUin6Hb9cz8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="main_iframe" src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="main_iframe">
+            <iframe src="https://www.youtube.com/embed/rUin6Hb9cz8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="main_iframe">
+            <iframe src="https://www.youtube.com/embed/xq7Y-FIqNp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
           <h2>NEWS</h2>
           <p>
             14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a>
