--- a/index.html
+++ b/index.html
@@ -89,13 +89,10 @@
             Data feedback
           </h2>
           <p>
-            So the board let's you receive data from your ECU ! <a href=https://www.youtube.com/embed/b4Lb02Id1Gc>check this YOUTUBE video</a>
+            So the board lets you receive data from your ECU ! <a href=https://www.youtube.com/embed/b4Lb02Id1Gc>check this YOUTUBE video</a>
             <br>
             At the moment it fully supports TunerPro. User can connect the board to TunerPro and having appropriate adx files receive and decode data from ECU. I provide all the necessary adx, xdf files,
             also some ready and tested Digifant 1 binaries with the board (go to <a href=#download>Download</a> section).
-            <br>
-            The board will also support <a href="https://play.google.com/store/apps/details?id=com.sgiroux.aldldroid&hl=en_US&gl=US">ALDL</a> droid, this works at the moment but requires some improvements.
-            <a href="https://www.youtube.com/watch?v=T1we1pdiohQ">DF1 and ALDL droid</a>
           </p>
           
           <h2>
