--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           </div>
           <h2>NEWS</h2>
           <p>
-            14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a>
+            <li>14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a></li>
+            <li>05.04.2021: <a href=tutorials.html#tutorials.html>TUTORIALS</a> added</li>
           </p>
           
           <h1>ABOUT</h1>
