tryit section added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="#contact">Contact</a>
         <a href="#download">Download</a>
         <a href="tutorials.html#tutorials.html">Tutorials</a>
+        <a href="tutorials.html#tryit">TryIt!</a>
       </div>
       
       <div class="top_bar_txt square" id="top_bar">
