--- a/tutorials.html
+++ b/tutorials.html
@@ -21,6 +21,7 @@
         <a href="index.html#contact">Contact</a>
         <a href="index.html#download">Download</a>
         <a href="tutorials.html#tutorials.html">Tutorials</a>
+        <a href="tutorials.html#tryit">TryIt!</a>
       </div>
       
       <div class="top_bar_txt square" id="top_bar">
@@ -105,6 +106,7 @@
             <a href="https://github.com/ravmiecznik/emub_bt_r/releases/download/V2.6.1/emubt.adx">EMUBT.adx</a><br>
           </p>
           <img src="resources/tunerPro3.png" class="center grid_picture">
+         <div id=tryit></div>
          <h4>
             Try It !!
          </h4>
