--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#ordering">Ordering</a>
         <a href="#contact">Contact</a>
         <a href="#download">Download</a>
-        <a href="tutorials.html#tutorials.html">Tutorials</a>
+        <a href="tutorials.html#tutorials.html">HowTo</a>
         <a href="tutorials.html#tryit">TryIt!</a>
       </div>
       
@@ -57,8 +57,9 @@
           </div>
           <h2>NEWS</h2>
           <p>
-            <li>14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a></li>
+            <li>25.09.2022: V2.72.2 Released: improved emubt.exe comunication, immobilizer support</li>
             <li>05.04.2021: <a href=tutorials.html#tutorials.html>TUTORIALS</a> added</li>
+            <li>14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a></li>
           </p>
           
           <h1>ABOUT</h1>
