new text, zooming of picture improved

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="index.html#contact">Contact</a>
         <a href="index.html#download">Download</a>
         <a href="tutorials.html#tutorials.html">Tutorials</a>
-        <a href="tutorials.html#tryit">HowTo</a>
+        <a href="tutorials.html">HowTo</a>
       </div>
 
       <div class="top_bar_txt square" id="top_bar">
