--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <h2>NEWS</h2>
       <p>
-        <li>25.09.2022: V2.72.2 Released: improved emubt.exe comunication, immobilizer support</li>
+        <li>25.09.2022: V2.7.2 Released: improved emubt.exe communication, immobilizer support</li>
         <li>05.04.2021: <a href=tutorials.html#tutorials.html>TUTORIALS</a> added</li>
         <li>14.02.2021: ALDL droid support implemented !!! <a href=#aldldroid>check here for details</a></li>
       </p>
