--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         class="contact_link contact_link_left" src="resources/youtube.png"></a>
     <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left"
         src="resources/facebook.png"></a>
-    <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img
-        class="contact_link contact_link_left" src="resources/git-icon_1.png"></a>
+    <!-- <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img
+        class="contact_link contact_link_left" src="resources/git-icon_1.png"></a> -->
   </div>
 
 
@@ -208,7 +208,7 @@
     <div class="cell bottom_border" id="download">
       <h1>DOWNLOAD</h1>
       <div id="release">
-        <h3><a href="">RELSEASE NUMBER</a></h3>
+        <!-- <h3><a href="">RELSEASE NUMBER</a></h3> -->
         <div id="pdf">
           <h4></h4>
         </div>
