--- a/tutorials.html
+++ b/tutorials.html
@@ -50,8 +50,8 @@
         class="contact_link contact_link_left" src="resources/youtube.png" /></a>
     <a title="Digifant tool" href="https://www.facebook.com/tuningtool/"><img class="contact_link contact_link_left"
         src="resources/facebook.png" /></a>
-    <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img
-        class="contact_link contact_link_left" src="resources/git-icon_1.png" /></a>
+    <!-- <a title="GIT" href="https://github.com/ravmiecznik/emub_bt_r/releases/latest"><img
+        class="contact_link contact_link_left" src="resources/git-icon_1.png" /></a> -->
   </div>
 
   <div class="main_grid bottom_border" id="main_grid">
